--- a/css/style.css
+++ b/css/style.css
@@ -202,19 +202,18 @@ span.hover_arrow
 /*************** head navigation css end ******************/
 
 /*************** particle css start ******************/
-#particles
+
+.particle-wrap
 {
+/*	margin-top: 100px;*/
+	width: 100%;
+	height: 500px;
+	background: #16a085;
+}
+#particles {
   width: 100%;
   height: 100%;
   overflow: hidden;
-}
-.ban-section
-{
-    width: 100%;
-    padding: 20% 0;
-    background-image: url('../img/banner-bg.jpg');
-    background-size: cover;
-    background-position: top left; 
 }
 /*************** particle css end ******************/
 
