--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     font-family: robotoslab;
     src: url('../fonts/RobotoSlab-Regular.ttf');
 }
+@font-face {
+    font-family: Arciform;
+    src: url('../fonts/Arciform.otf');
+}
 /*@import url(https://fonts.googleapis.com/css?family=Overlock);*/
 a
 {
@@ -35,8 +39,13 @@ body
 }
 header
 {
-/*    position: absolute;*/
+    position: absolute;
+	z-index: 9;
     width: 100%;
+}
+.header-wrap
+{
+	background: rgba(255, 255, 255, 0.69);
 }
 #logo_wrapper
 {    
@@ -171,7 +180,7 @@ header
 {
 	font-family: robotoslab;
 	font-size: 17px;
-	color: #333;
+	color: #000;
 }
 .navbar-nav>li>a:hover
 {
@@ -207,13 +216,102 @@ span.hover_arrow
 {
 /*	margin-top: 100px;*/
 	width: 100%;
-	height: 500px;
-	background: #16a085;
+	position: relative;
+    padding: 15% 0px;
+/*    overflow: hidden;*/
 }
-#particles {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+#particles 
+{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	background: rgb(7, 26, 70);
+	background: url('../img/banner-bg3.jpg');
+	background-size: cover;
+	background-position: center bottom;
+	z-index: -2;
+}
+.ban-overlay
+{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	background: rgba(7, 26, 70, 0.40);
+	z-index: -1;
+}
+
+.scroll-down
+{
+	width: 50px;
+    height: 70px;
+    text-align: center;
+    line-height: 60px;
+    position: absolute;
+    bottom: -35px;
+    left: 50%;
+    overflow: hidden;
+    background: rgb(255, 215, 62);
+    border: 5px solid #fff;
+    box-sizing: border-box;
+    border-radius: 25px 25px 25px 25px;
+}
+.fa-long-arrow-down
+{
+	color: #333;
+	font-size: 16px;
+	position: relative;
+	top: -5px;
+	cursor: pointer;
+    animation: down-arrow 4s infinite;
+/*	opacity: 0;*/
+}
+@keyframes down-arrow{
+    0%{
+        top: 5px;
+/*        opacity: 1;   */
+    }
+    25%{
+        top: -5px;
+/*        opacity: 0.5;*/
+    }
+    50%{
+        top: 5px;
+/*        opacity: 1;*/
+    }
+    75%{
+        top: -5px;
+/*        opacity: 0.5;*/
+    }
+    100%{
+        top: 5px;
+/*        opacity: 1;*/
+    }
+}
+span.name-wrap
+{
+	display: inline-block;
+	padding: 10px 20px;
+/*	background-color: #333; */
+}
+span.name
+{
+/*	font-family: Arciform;*/
+/*	font-family: 'Bree Serif', serif;*/
+/*	font-family: 'Righteous', cursive;*/
+	font-family: 'Source Code Pro', monospace;
+	color: #fff;
+	font-size: 70px;
+	padding: 0px 20px;
+	text-align: center;
+/*	background: #fff;*/
+	text-transform: uppercase;
+	display: inline-block;
 }
 /*************** particle css end ******************/
 
