--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,21 @@ a:hover, a:active, a:visited
 body
 {
     color: #333!important;
+	font-family: robotoslab;
+}
+body::-webkit-scrollbar {
+    width: 17px;
+} 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px #fff;
+/*    border: 2px solid white;*/
+} 
+body::-webkit-scrollbar-thumb {
+    background-color: #484848;
+    outline: 0px solid #0b5196;
+    border: 6px solid white;   
+    border-top: 1px solid white;
+    border-bottom: 1px solid whites;
 }
 /*************** start screen css start ******************/
 #start_screen
@@ -314,6 +329,83 @@ span.name
 	display: inline-block;
 }
 /*************** particle css end ******************/
+
+
+/*************** about me css start ******************/
+h1{
+	font-size: 42px;
+	position: relative;
+}
+h1:after{
+	content: "";
+    display: block;
+    width: 100px;
+    height: 0px;
+    border-bottom: 3px solid #10daa8 ;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+.abt-img{
+	width: 100%;
+    /* -webkit-clip-path: polygon(0% 0%, 99% 5%, 99% 97%, 0% 100%); */
+    /* clip-path: polygon(0% 0%, 99% 3%, 99% 97%, 0% 100%); */
+    -webkit-box-shadow: -131px 104px 49px -60px rgba(196,196,196,1);
+    -moz-box-shadow: -131px 104px 49px -60px rgba(196,196,196,1);
+    box-shadow: -131px 104px 49px -60px rgba(196,196,196,1);
+    -webkit-box-shadow: -45px 45px 25px 13px rgba(122,122,122,1);
+    -moz-box-shadow: -45px 45px 25px 13px rgba(122,122,122,1);
+    box-shadow: -0px 0px 0px 0px rgba(122, 122, 122, 0.48);
+    border-left-width: 3px;
+    border-left-color: #fff;
+    border-left-style: solid;
+	border-bottom-width: 3px;
+    border-bottom-color: #fff;
+    border-bottom-style: solid;
+	position: relative;
+    top: 45px;
+    left: -45px;
+	transition: 0.9s all ease;
+}
+.about-section:hover .abt-img{
+	top: 0px;
+	left: 0px;
+	box-shadow: -45px 45px 25px 13px rgba(122, 122, 122, 0.48);
+}
+p.details-para{
+	font-family: 'Roboto', sans-serif;
+	font-size: 18px;
+	line-height: 30px;
+	padding-top: 20px;
+}
+.social-media ul{
+	list-style-type: none;
+}
+.social-media ul li{
+	display: inline-block;
+	padding: 0px 10px;
+	font-size: 16px;
+}
+.social-media ul li:first-child{
+	padding-left: 0px;
+}
+.social-media ul li a .fa{ 
+	color: #333;
+	font-size: 18px;
+}
+.facebook{
+	color: #3b5998!important;
+}
+.instagram{
+	color: #bc2a8d!important;
+}
+.twitter{
+	color: #00aced!important;
+}
+.linkedin{
+	color: #007bb6!important;
+}
+/*************** about me css end ******************/
 
 
 @media (max-width:768px) {
