--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ a
 a:hover, a:active, a:visited
 {
     text-decoration: none;
+    background-color: transparent!important;
 }
 body
 {
@@ -333,7 +334,7 @@ span.name
 
 /*************** about me css start ******************/
 h1{
-	font-size: 42px;
+	font-size: 36px;
 	position: relative;
 }
 h1:after{
@@ -409,8 +410,11 @@ p.details-para{
 /*************** about me css end ******************/
 
 /*************** service css start ******************/
+.services-section{
+    background-color: #333;
+}
 h2{
-	font-size: 42px; 
+	font-size: 36px; 
 }
 /*************** about me css end ******************/
 
